--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 <div class="cardInside">
     <h3 class="back">HAPPY BIRTHDAY!</h3>
-    <p>Dear best friend,</p> 
+    <p> HAPPY BIRTHDAY MY BABY ,</p> 
     <p>Happy birthday!! I hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
     <p class="name">Praween</p>
   </div>
